tests/samples/negative/expressions/block_expression_unreachable_tail.ax
module block_expression_unreachable_tail;

fn main() -> i32 {
    let value = {
        return 1;
        2
    };
    return value;
}
